--- a/notebooks/baseline_scoring.ipynb
+++ b/notebooks/baseline_scoring.ipynb
@@ -13,26 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.models.rake_extractor.keyword_extractor import KeywordExtractor\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.models.metrics import rouge_score_corpus"
+    "import os\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "from text_tagging_model.models.rake_based_model import TagsExtractor\n",
+    "from text_tagging_model.models.metrics import rouge_score_corpus"
    ]
   },
   {
@@ -44,13 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ast\n",
-    "\n",
-    "data = pd.read_csv(\"../resources/data/processed/data_extractive_habr.csv\")\n",
+    "data = pd.read_csv(\"./resources/data/processed/data_extractive_habr.csv\")\n",
     "\n",
     "X_test = data[\"text\"]\n",
     "y_test = data[\"tag\"].str.split().to_list()"
@@ -65,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,14 +61,17 @@
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     /Users/pavelkockin/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/pavelkockin/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
    "source": [
-    "model = KeywordExtractor(\n",
+    "model = TagsExtractor(\n",
     "    language=\"russian\",\n",
-    "    model_name=os.path.abspath(\"../resources/models/cc.ru.300.bin\"),\n",
+    "    fasttext_model_path=\"./resources/models/cc.ru.300.bin\",\n",
     ")"
    ]
   },
@@ -97,19 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3128/3128 [03:57<00:00, 13.20it/s]\n"
+      "100%|██████████| 3128/3128 [04:02<00:00, 12.91it/s]\n"
      ]
     }
    ],
    "source": [
-    "y_pred = model.extract_for_corpus(X_test, top_n=5, min_keyword_cnt=1)"
+    "y_pred = model.extract_for_corpus(X_test, top_n=5)"
    ]
   },
   {
@@ -121,25 +108,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3128it [00:00, 19582.67it/s]\n"
+      "3128it [00:00, 22083.68it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'recall': 0.07772707017624733,\n",
-       " 'precision': 0.060664730558244596,\n",
-       " 'f1': 0.06680929111156135}"
+       "{'recall': 0.07775215961142365,\n",
+       " 'precision': 0.06068431245965139,\n",
+       " 'f1': 0.06683085640888593}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
